feedback link no longer shifts it's location. fixes #672

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -333,6 +333,7 @@ ul#view-header li {
 .feedback-bar {
     font-size:80%;
     color:gray;
+    clear: both;
 }
 
 .feedback-bar a {
